src/main/bkool/parser/.antlr/BKOOLParser.py
# Generated from d:\Project\PPL\assignment1\src\main\bkool\parser\BKOOL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "<INVALID>", "<INVALID>", "'boolean'", 
                     "'int'", "'float'", "'void'", "'string'", "'new'", 
                     "'if'", "'else'", "'then'", "'continue'", "'break'", 
                     "'for'", "'do'", "'to'", "'downto'", "'return'", "'true'", 
                     "'false'", "'class'", "'extends'", "'static'", "'final'", 
                     "'nil'", "'this'", "'+'", "'-'", "'*'", "'/'", "'\\'", 
                     "'%'", "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", 
                     "'||'", "'&&'", "'!'", "'^'", "'='", "':='", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "':'", "','", 
                     "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMENT_LINE", "COMMENT_BLOCK", 
                      "BOOLEAN", "INT", "FLOAT", "VOID", "STRING", "NEW", 
                      "IF", "ELSE", "THEN", "CONTINUE", "BREAK", "FOR", 
                      "DO", "TO", "DOWNTO", "RETURN", "TRUE", "FALSE", "CLASS", 
                      "EXTENDS", "STATIC", "FINAL", "NIL", "THIS", "ADDOP", 
                      "SUBOP", "MULOP", "I_DIV", "F_DIV", "MOD", "NOT_EQUAL", 
                      "EQUAL", "LESS", "GREATER", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", 
                      "OR", "AND", "NOT", "CONCATENATION", "ASSIGN", "INDEXOP", 
                      "LB", "RB", "LP", "RP", "LSB", "RSB", "SEMI", "COLON", 
                      "COMMA", "DOT", "INT_LIT", "FLOAT_LIT", "STRING_LIT", 
                      "ID", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_typ = 1
    RULE_class_decl = 2
    RULE_class_name = 3
    RULE_class_member = 4
    RULE_attribute_decl = 5
    RULE_attribute_kw = 6
    RULE_attribute_list = 7
    RULE_method_decl = 8
    RULE_para_list = 9
    RULE_constructor = 10
    RULE_cstor_name = 11
    RULE_main_method = 12
    RULE_arr_decl = 13
    RULE_arr_list = 14
    RULE_obj_decl = 15
    RULE_obj_list = 16
    RULE_obj_name = 17
    RULE_int_typ = 18
    RULE_float_typ = 19
    RULE_bool_typ = 20
    RULE_string_typ = 21
    RULE_void_typ = 22
    RULE_arr_typ = 23
    RULE_class_typ = 24
    RULE_stmt = 25
    RULE_expr = 26
    RULE_atom = 27
    RULE_stmt_block = 28
    RULE_stmt_block_wo_return = 29
    RULE_asm_stmt = 30
    RULE_lhs = 31
    RULE_if_stmt = 32
    RULE_for_stmt = 33
    RULE_scalar_var = 34
    RULE_break_stmt = 35
    RULE_continue_stmt = 36
    RULE_return_stmt = 37
    RULE_method_invo = 38
    RULE_invoke_stmt = 39
    RULE_argu_list = 40
    RULE_literal = 41
    RULE_bool_lit = 42
    RULE_arr_lit = 43
    RULE_arr_value = 44

    ruleNames =  [ "program", "typ", "class_decl", "class_name", "class_member", 
                   "attribute_decl", "attribute_kw", "attribute_list", "method_decl", 
                   "para_list", "constructor", "cstor_name", "main_method", 
                   "arr_decl", "arr_list", "obj_decl", "obj_list", "obj_name", 
                   "int_typ", "float_typ", "bool_typ", "string_typ", "void_typ", 
                   "arr_typ", "class_typ", "stmt", "expr", "atom", "stmt_block", 
                   "stmt_block_wo_return", "asm_stmt", "lhs", "if_stmt", 
                   "for_stmt", "scalar_var", "break_stmt", "continue_stmt", 
                   "return_stmt", "method_invo", "invoke_stmt", "argu_list", 
                   "literal", "bool_lit", "arr_lit", "arr_value" ]

    EOF = Token.EOF
    T__0=1
    COMMENT_LINE=2
    COMMENT_BLOCK=3
    BOOLEAN=4
    INT=5
    FLOAT=6
    VOID=7
    STRING=8
    NEW=9
    IF=10
    ELSE=11
    THEN=12
    CONTINUE=13
    BREAK=14
    FOR=15
    DO=16
    TO=17
    DOWNTO=18
    RETURN=19
    TRUE=20
    FALSE=21
    CLASS=22
    EXTENDS=23
    STATIC=24
    FINAL=25
    NIL=26
    THIS=27
    ADDOP=28
    SUBOP=29
    MULOP=30
    I_DIV=31
    F_DIV=32
    MOD=33
    NOT_EQUAL=34
    EQUAL=35
    LESS=36
    GREATER=37
    LESS_OR_EQUAL=38
    GREATER_OR_EQUAL=39
    OR=40
    AND=41
    NOT=42
    CONCATENATION=43
    ASSIGN=44
    INDEXOP=45
    LB=46
    RB=47
    LP=48
    RP=49
    LSB=50
    RSB=51
    SEMI=52
    COLON=53
    COMMA=54
    DOT=55
    INT_LIT=56
    FLOAT_LIT=57
    STRING_LIT=58
    ID=59
    WS=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Class_declContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Class_declContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 90
                self.class_decl()
                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 95
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool_typ(self):
            return self.getTypedRuleContext(BKOOLParser.Bool_typContext,0)


        def int_typ(self):
            return self.getTypedRuleContext(BKOOLParser.Int_typContext,0)


        def float_typ(self):
            return self.getTypedRuleContext(BKOOLParser.Float_typContext,0)


        def void_typ(self):
            return self.getTypedRuleContext(BKOOLParser.Void_typContext,0)


        def string_typ(self):
            return self.getTypedRuleContext(BKOOLParser.String_typContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_typ




    def typ(self):

        localctx = BKOOLParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_typ)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.bool_typ()
                pass
            elif token in [BKOOLParser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.int_typ()
                pass
            elif token in [BKOOLParser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.float_typ()
                pass
            elif token in [BKOOLParser.VOID]:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.void_typ()
                pass
            elif token in [BKOOLParser.STRING]:
                self.enterOuterAlt(localctx, 5)
                self.state = 101
                self.string_typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def class_name(self):
            return self.getTypedRuleContext(BKOOLParser.Class_nameContext,0)


        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def class_member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Class_memberContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Class_memberContext,i)


        def constructor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ConstructorContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ConstructorContext,i)


        def main_method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Main_methodContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Main_methodContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class_decl




    def class_decl(self):

        localctx = BKOOLParser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(BKOOLParser.CLASS)
            self.state = 105
            self.class_name()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 106
                self.match(BKOOLParser.EXTENDS)
                self.state = 107
                self.match(BKOOLParser.ID)


            self.state = 110
            self.match(BKOOLParser.LP)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.VOID) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.ID))) != 0):
                self.state = 114
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 111
                    self.class_member()
                    pass

                elif la_ == 2:
                    self.state = 112
                    self.constructor()
                    pass

                elif la_ == 3:
                    self.state = 113
                    self.main_method()
                    pass


                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_class_name




    def class_name(self):

        localctx = BKOOLParser.Class_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(BKOOLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_memberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Method_declContext,0)


        def arr_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Arr_declContext,0)


        def obj_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Obj_declContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class_member




    def class_member(self):

        localctx = BKOOLParser.Class_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_member)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.attribute_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.method_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.arr_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.obj_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def attribute_list(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_listContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def attribute_kw(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_kwContext,0)


        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_decl




    def attribute_decl(self):

        localctx = BKOOLParser.Attribute_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC or _la==BKOOLParser.FINAL:
                self.state = 129
                self.attribute_kw()


            self.state = 132
            self.typ()
            self.state = 133
            self.match(BKOOLParser.ID)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.ASSIGN:
                self.state = 134
                self.match(BKOOLParser.ASSIGN)
                self.state = 135
                self.expr(0)


            self.state = 138
            self.attribute_list()
            self.state = 139
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_kw




    def attribute_kw(self):

        localctx = BKOOLParser.Attribute_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 141
                self.match(BKOOLParser.STATIC)
                pass

            elif la_ == 2:
                self.state = 142
                self.match(BKOOLParser.FINAL)
                pass

            elif la_ == 3:
                self.state = 143
                self.match(BKOOLParser.STATIC)
                self.state = 144
                self.match(BKOOLParser.FINAL)
                pass

            elif la_ == 4:
                self.state = 145
                self.match(BKOOLParser.FINAL)
                self.state = 146
                self.match(BKOOLParser.STATIC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def attribute_list(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_listContext,0)


        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_list




    def attribute_list(self):

        localctx = BKOOLParser.Attribute_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attribute_list)
        self._la = 0 # Token type
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(BKOOLParser.COMMA)
                self.state = 150
                self.match(BKOOLParser.ID)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.ASSIGN:
                    self.state = 151
                    self.match(BKOOLParser.ASSIGN)
                    self.state = 152
                    self.expr(0)


                self.state = 155
                self.attribute_list()
                pass
            elif token in [BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def para_list(self):
            return self.getTypedRuleContext(BKOOLParser.Para_listContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(BKOOLParser.Stmt_blockContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_method_decl




    def method_decl(self):

        localctx = BKOOLParser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 159
                self.match(BKOOLParser.STATIC)


            self.state = 162
            self.typ()
            self.state = 163
            self.match(BKOOLParser.ID)
            self.state = 164
            self.match(BKOOLParser.LB)
            self.state = 165
            self.para_list()
            self.state = 166
            self.match(BKOOLParser.RB)
            self.state = 167
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.TypContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.TypContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.SEMI)
            else:
                return self.getToken(BKOOLParser.SEMI, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_para_list




    def para_list(self):

        localctx = BKOOLParser.Para_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_para_list)
        self._la = 0 # Token type
        try:
            self.state = 194
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.BOOLEAN, BKOOLParser.INT, BKOOLParser.FLOAT, BKOOLParser.VOID, BKOOLParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.typ()
                self.state = 170
                self.match(BKOOLParser.ID)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKOOLParser.COMMA:
                    self.state = 171
                    self.match(BKOOLParser.COMMA)
                    self.state = 172
                    self.match(BKOOLParser.ID)
                    self.state = 177
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKOOLParser.SEMI:
                    self.state = 178
                    self.match(BKOOLParser.SEMI)
                    self.state = 179
                    self.typ()
                    self.state = 180
                    self.match(BKOOLParser.ID)
                    self.state = 185
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==BKOOLParser.COMMA:
                        self.state = 181
                        self.match(BKOOLParser.COMMA)
                        self.state = 182
                        self.match(BKOOLParser.ID)
                        self.state = 187
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 192
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cstor_name(self):
            return self.getTypedRuleContext(BKOOLParser.Cstor_nameContext,0)


        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def para_list(self):
            return self.getTypedRuleContext(BKOOLParser.Para_listContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def stmt_block_wo_return(self):
            return self.getTypedRuleContext(BKOOLParser.Stmt_block_wo_returnContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_constructor




    def constructor(self):

        localctx = BKOOLParser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.cstor_name()
            self.state = 197
            self.match(BKOOLParser.LB)
            self.state = 198
            self.para_list()
            self.state = 199
            self.match(BKOOLParser.RB)
            self.state = 200
            self.stmt_block_wo_return()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cstor_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_cstor_name




    def cstor_name(self):

        localctx = BKOOLParser.Cstor_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cstor_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(BKOOLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_methodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def void_typ(self):
            return self.getTypedRuleContext(BKOOLParser.Void_typContext,0)


        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)
